syntax = "proto3";

package greet;

option go_package = "github.com/idfumg/go-grpc-course-1/greet/proto";

message GreetRequest {
    string first_name = 1;
}

message GreetResponse {
    string result = 1;
}

message SumRequest {
    int32 x = 1;
    int32 y = 2;
}

message SumResponse {
    int32 result = 1;
}

message PrimesRequest {
    int64 value = 1;
}

message PrimesResponse {
    int64 result = 1;
}

message SqrtRequest {
    int64 number = 1;
}

message SqrtResponse {
    double result = 1;
}

service GreetService {
    rpc Greet(GreetRequest) returns (GreetResponse);
    rpc Sum(SumRequest) returns (SumResponse);
    rpc GreetManyTimes(GreetRequest) returns (stream GreetResponse);
    rpc GetPrimes(PrimesRequest) returns (stream PrimesResponse);
    rpc LongGreet(stream GreetRequest) returns (GreetResponse);
    rpc GreetEveryone(stream GreetRequest) returns (stream GreetResponse);
    rpc Sqrt(SqrtRequest) returns (SqrtResponse);
    rpc GreetWithDeadline(GreetRequest) returns (GreetResponse);
}